# techstore_python

techstore/: .env  db.sqlite3  docker-compose.dev.yml  pyproject.toml  temp_req.txt
techstore/postgres_data/18/docker/: postmaster.pid
techstore/postgres_data/18/docker/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2840_fsm  2841  pg_internal.init
techstore/postgres_data/18/docker/base/16384/: 1247  1247_fsm  1249  1249_fsm  1259  1259_fsm  16389  16390  16398  16399  16401  16402  16409  16411  16413  16414  16421  16423  16429  16431  16433  16440  16442  16443  16457  16459  16461  16468  16470  16477  16479  16486  16487  16488  16500  16501  16502  16503  16515  16516  (+84 more)
techstore/postgres_data/18/docker/base/4/: 2619
techstore/postgres_data/18/docker/base/5/: pg_internal.init
techstore/postgres_data/18/docker/global/: 1260  1262  2396  2671  2676  pg_control  pg_internal.init
techstore/shop/: admin.py  models.py  serializers.py  urls.py  views.py
techstore/shop/migrations/: 0001_initial.py
techstore/techstore/: settings.py  urls.py
